--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">one-liners</string>
     <string name="title_book_detail">book Detail</string>
+    <string name="set_svg_image_script">javascript:var $scope = angular.element(\'#content\').scope();console.dir($scope);$scope.setSvgImage(\'%s\');</string>
 
 </resources>
