--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">one-liners</string>
     <string name="title_book_detail">book Detail</string>
-    <string name="set_svg_image_script">javascript:var $scope = angular.element(\'#content\').scope();console.dir($scope);$scope.setSvgImage(\'%s\');</string>
+    <string name="set_svg_image_script">javascript:var scope = angular.element(\'#content\').scope();scope.init(\'%2$s\', \'%3$s\');scope.setSvgImage(\'%1$s\');</string>
 
 </resources>
