--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="title_photo_detail">Photo Detail</string>
     <string name="set_svg_image_script">javascript:var scope = angular.element(\'#content\').scope();scope.initSVG(\'%2$s\', \'%3$s\');scope.setSvgImage(\'%1$s\');</string>
     <string name="drawing_service_url">http://one-liners.parseapp.com</string>
+    <string name="book_search_query_hint">タイトル/著者名/ISBN/JAN</string>
+    <string name="rakuten_api_endpoint">https://app.rakuten.co.jp/</string>
     <!--<string name="drawing_service_url">http://10.0.3.2:9000</string>-->
 
 </resources>
