--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="dialog_confirm_message_delete">削除しますか？</string>
     <string name="dialog_posigive_button_text">OK</string>
     <string name="dialog_negative_button_text">Cancel</string>
+    <string name="dialog_posigive_button_text_save">保存する</string>
+    <string name="dialog_negative_button_text_dont_save">保存しない</string>
     <string name="dialog_confirm_message_overwrite_photo">現在の画像は破棄されます。\nよろしいですか？</string>
     <string name="dialog_confirm_message_share_public">公開すると他のユーザーがあなたの投稿を閲覧できます。\nよろしいですか？</string>
     <string name="dialog_confirm_message_review_is_dirty">変更したデータが保存されていません。\n保存しますか？\n%1$sを選ぶと保存せずに一覧に戻ります。</string>
